hphp/hack/test/typecheck/akempty/akempty_promotion_10.php.exp
File "akempty_promotion_10.php", line 8, characters 3-18:
Invalid assignment (Typing[4110])
File "akempty_promotion_10.php", line 7, characters 17-23:
Expected array (empty)
File "akempty_promotion_10.php", line 7, characters 17-23:
But got varray_or_darray<string, int>
